# Mesa-3.4.1-riscos

./: AMakefile  Make-cfg  Makefile  Makefile.DJ  README.md  configure  configure.in
docs/: DEVINFO  IAFA-PACKAGE  README  README.RISCOS  RISCOS.DEMOS  ROSMesa
include/: glaux.h
include/GL/: rosmesa.h
ros_demos/: Makefile  anti32.c  cone2.c  cube3.c  cube32.c  desk_vgear.c  morph32.c  morph3d.c  movelight.c  rosdemo16.c  rosdemo32.c  rosdemo8.c  teapot16.c  teapot32.c  teapot8.c
src/: Makefile  Makefile.am  Makefile.in  aatriangle.c  aatritemp.h  copy_tmp.h  cva.c  depend  fog_tmp.h  imaging.c  interp_tmp.h  logic.c  shade_tmp.h  texture.c  triangle.c  tritemp.h  types.h  vbxform.c  xform_tmp.h
src-aux/: Makefile
src-glu/: Makefile
src/FX/: Makefile.am  Makefile.in  fxcliptmp.h
src/FX/X86/: Makefile.am  Makefile.in
src/OSmesa/: Makefile.in
src/RISCOS/: colours.c  ros_asm.h  ros_asm.s  rosmesa.c  xform_asm.s  xform_c.c
src/S3/: S3dtk.h  S3mesa.c  S3mesa.def  S3mesa.rc  S3wgl.c
src/X/: Makefile.in  xmesa1.c  xmesa2.c
src/X86/: Makefile.in
